[package]
name = "cs397_ray_tracing_sp22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accel = "0.3.1"
cgmath = "0.18.0"
crossbeam = "0.8.1"
image = "0.23.14"
indicatif = "0.16.2"
rand = "0.8.4"
rayon = "1.5.1"
tobj = "3.2.0"
